Closed
Bug 153243
Opened 23 years ago
Closed 23 years ago
Error in recipient certificate availability checking, causing unreadable mail
Categories
(MailNews Core :: Security: S/MIME, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: KaiE, Assigned: KaiE)
References
Details
(Keywords: regression, Whiteboard: [adt1 rtm] [ETA 06/24])
Attachments
(1 file)
1.06 KB,
patch
|
ssaux
:
review+
jag+mozilla
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
Compose a mail message.
Enable encryption.
Add a first recipient for whom you have a valid recipient certificate.
Add a second recipient, for whom you have not.
Actual behaviour: The message will be sent. The message will not be readable by
the second recipient.
Expected behaviour: Mozilla should not send the message, but show an error message.
Assignee | ||
Updated•23 years ago
|
Severity: normal → blocker
Status: NEW → ASSIGNED
Keywords: nsbeta1+
Priority: -- → P1
Whiteboard: [adt1 rtm]
Assignee | ||
Comment 1•23 years ago
|
||
This was a silly bug introduced by the patch from 130692.
The input data was a char* buffer, that contained multiple zero terminated
strings after each other. The logic already iterated over them one after
another.
The patch in bug 130692 tried to copy the source data into a string class
object, in order to convert to lowercase. But clearly this only copies the
first recipient address, not the whole input data.
The solution is to simply move the lowercase conversion into the loop iterating
over all recipients.
Comment 2•23 years ago
|
||
Comment on attachment 88563 [details] [diff] [review]
Fix
r=ssaux
Attachment #88563 -
Flags: review+
Comment 3•23 years ago
|
||
Comment on attachment 88563 [details] [diff] [review]
Fix
sr=jag
Attachment #88563 -
Flags: superreview+
Assignee | ||
Comment 4•23 years ago
|
||
Checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: adt1.0.1,
mozilla1.0.1
Resolution: --- → FIXED
Comment 5•23 years ago
|
||
charles - can you pls verify this fix on the trunk? thanks!
Updated•23 years ago
|
Assignee | ||
Comment 6•23 years ago
|
||
*** Bug 146666 has been marked as a duplicate of this bug. ***
Comment 7•23 years ago
|
||
verified on the 0621 trunk builds - now works as specified by design.
Used multiple recipients in a combination of orders, both valid and invalid, of
varying recipient types.
Status: RESOLVED → VERIFIED
Comment 8•23 years ago
|
||
adt1.0.1 (on ADT's behalf) approval for checkin to the 1.0 branch, pending
drivers' approval. pls check this in asap, then add the "fixed1.0.1" keyword.
Assignee | ||
Comment 9•23 years ago
|
||
Marking as regression, because this bug was introduced with 130692, and is not
contained in Mozilla 1.0.
Keywords: regression
Updated•23 years ago
|
Attachment #88563 -
Flags: approval+
Comment 10•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1 → mozilla1.0.1+
Comment 12•23 years ago
|
||
same tests as comment #7 using 0625 branch builds
Keywords: fixed1.0.1 → verified1.0.1
You need to log in
before you can comment on or make changes to this bug.
Description
•