b=153243 Error in recipient certificate availability checking, causing unreadable mail r=ssaux sr=jag